--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "webpack serve"
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
     "html-webpack-plugin": "^4.5.1",
+    "moment": "^2.29.1",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
